# cifar10_sfl_framework

./: .gitignore  pyproject.toml
configs/: fl_config.yaml
datasets/: fl_dataset.py
models/: resnet.py
outputs/2025-09-16/20-42-00/.hydra/: hydra.yaml
outputs/2025-09-16/20-42-29/.hydra/: config.yaml  hydra.yaml
outputs/2025-09-16/20-42-48/.hydra/: hydra.yaml
outputs/2025-09-16/20-43-12/.hydra/: hydra.yaml
outputs/2025-09-16/20-43-23/.hydra/: hydra.yaml
outputs/2025-09-16/20-43-52/.hydra/: hydra.yaml
outputs/2025-09-16/20-45-11/.hydra/: hydra.yaml
outputs/2025-09-16/20-45-55/.hydra/: config.yaml  hydra.yaml
outputs/2025-09-16/20-52-29/.hydra/: config.yaml  hydra.yaml
outputs/2025-09-16/20-55-05/.hydra/: hydra.yaml
outputs/2025-09-16/20-56-05/.hydra/: hydra.yaml
outputs/2025-09-16/20-58-10/.hydra/: hydra.yaml
outputs/2025-09-16/21-03-21/.hydra/: hydra.yaml
outputs/2025-09-16/21-31-07/.hydra/: hydra.yaml
outputs/2025-09-16/21-31-22/.hydra/: hydra.yaml
outputs/2025-09-16/21-35-35/.hydra/: hydra.yaml
src/federated_algorithms/: fedavg.py
src/models/: residual_block.py  resnet_client_side.py  resnet_server_side.py
src/trainers/: fl_client.py  fl_client_base.py  fl_client_fedprox.py  fl_client_good.py  fl_client_legacy.py  fl_client_scaffold.py  fl_server.py  fl_server_base.py  fl_server_scaffold.py  sl_client.py  sl_server.py
src/utils/: utils.py
tools/: fl_cifar10.py  fl_cifar10_run.py  run_fl.py  sl_cifar10.py  v1_cifar10.py  v2_cifar10.py
trainers/: fl_client.py  fl_local_update.py  sl_client.py  sl_server.py
utils/: utils.py
(+106 files in other folders)
