[project]
name = "convergence-analysis-of-split-federated-learning-on-heterogeneous-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "hydra-core>=1.3.2",
    "matplotlib>=3.8.4",
    "numpy==1.21.6",
    "pandas>=1.5.1",
    "scikit-learn>=1.6.1",
    "torch==1.12.1+cu113",
    "torchaudio==0.12.1",
    "torchvision==0.13.1+cu113",
]

# === uv index 설정: PyTorch cu113 인덱스 추가 ===
[[tool.uv.index]]
name = "pytorch-cu113"
url = "https://download.pytorch.org/whl/cu113"
# explicit = true로 설정하면 이 인덱스에서만 명시적으로 핀된 패키지들만 가져오고,
# 다른 패키지는 기본 PyPI에서 가져오게 됩니다 (안전).
explicit = true

# === torch 계열을 위 인덱스에서만 가져오도록 핀(pinning) ===
[tool.uv.sources]
torch = { index = "pytorch-cu113" }
torchvision = { index = "pytorch-cu113" }
torchaudio = { index = "pytorch-cu113" }
